--- a/.travis.yml
+++ b/.travis.yml
@@ -5,22 +5,15 @@ language: emacs-lisp
 env:
   matrix:
     - EMACS=emacs24
-#    - EMACS=emacs-snapshot
+    - EMACS=emacs-snapshot
 
 install:
-  - if [ "$EMACS" = "emacs24" ]; then
-        sudo add-apt-repository -y ppa:cassou/emacs &&
-        sudo apt-get update -qq &&
-        sudo apt-get install -qq emacs24 emacs24-el;
-    fi
-  - if [ "$EMACS" = "emacs-snapshot" ]; then
-        sudo add-apt-repository -y ppa:ubuntu-elisp/ppa &&
-        sudo apt-get update -qq &&
-        sudo apt-get install -qq emacs-snapshot;
-    fi
+  sudo add-apt-repository -y ppa:cassou/emacs &&
+  sudo apt-get update -qq &&
+  sudo apt-get install -qq emacs24 emacs24-el;
 
 before_script:
   make .downloads
 
 script:
-  make test EMACS=${EMACS}
+  make test
