Add emacs --version to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,7 @@ install:
     fi
 
 before_script:
-  make .downloads
-  echo ${EMACS} --version
+  ${EMACS} --version && make .downloads
 
 script:
   make test EMACS=${EMACS}
